--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^19.2.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.10.1",
+    "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
     "xlsx": "^0.18.5"
