--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "nodemailer": "^7.0.5",
     "pdfkit": "^0.17.2",
     "sequelize": "^6.37.7",
+    "socket.io": "^4.8.3",
     "winston": "^3.17.0",
     "xlsx": "^0.18.5"
   },
